[package]
name = "cex-frontrun-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
crypto-market-type = "1.1.3"
crypto-markets = "1.3.8"
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
